Add get tags api. #35
