# proto/articles.pb.gw.go
@@ -415,6 +415,24 @@ func local_request_Articles_UnfavoriteArticle_0(ctx context.Context, marshaler r
 
 }
 
+func request_Articles_GetTags_0(ctx context.Context, marshaler runtime.Marshaler, client ArticlesClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.GetTags(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_Articles_GetTags_0(ctx context.Context, marshaler runtime.Marshaler, server ArticlesServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.GetTags(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterArticlesHandlerServer registers the http handlers for service Articles to "mux".
 // UnaryRPC     :call ArticlesServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -577,6 +595,26 @@ func RegisterArticlesHandlerServer(ctx context.Context, mux *runtime.ServeMux, s
 		}
 
 		forward_Articles_UnfavoriteArticle_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_Articles_GetTags_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_Articles_GetTags_0(rctx, inboundMarshaler, server, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Articles_GetTags_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -781,6 +819,26 @@ func RegisterArticlesHandlerClient(ctx context.Context, mux *runtime.ServeMux, c
 
 	})
 
+	mux.Handle("GET", pattern_Articles_GetTags_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_Articles_GetTags_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Articles_GetTags_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -800,6 +858,8 @@ var (
 	pattern_Articles_FavoriteArticle_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"articles", "slug", "favorite"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_Articles_UnfavoriteArticle_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"articles", "slug", "favorite"}, "", runtime.AssumeColonVerbOpt(true)))
+
+	pattern_Articles_GetTags_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"tags"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
@@ -818,4 +878,6 @@ var (
 	forward_Articles_FavoriteArticle_0 = runtime.ForwardResponseMessage
 
 	forward_Articles_UnfavoriteArticle_0 = runtime.ForwardResponseMessage
+
+	forward_Articles_GetTags_0 = runtime.ForwardResponseMessage
 )
